--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       font-size: 40px;
     }
   </style> -->
-  <body>
+  <body class="dark">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
